less depth for notes

--- a/slides.org
+++ b/slides.org
@@ -56,11 +56,11 @@
 
 * CS 350 Summer 2024, University of Regina
 :PROPERTIES:
-:TOC:      :include all :force (nothing) :ignore (nothing) :local (nothing)
+:TOC:      :include all :depth 2 :force ((nothing)) :ignore ((nothing)) :local ((nothing))
 :END:
 
 :PROPERTIES:
-:TOC:      :include all
+:TOC:      :include all :depth 1
 :END:
 
 This document contains the compiled course notes for the summer 2024 iteration of  CS 350 at the University of Regina, taught by Dr. Joseph Eremondi.
@@ -69,464 +69,80 @@ This document contains the compiled course notes for the summer 2024 iteration o
 - [[#cs-350-summer-2024-university-of-regina][CS 350 Summer 2024, University of Regina]]
 - [[#introduction][Introduction]]
   - [[#course-overview][Course Overview]]
-    - [[#course-objectives][Course Objectives]]
-    - [[#textbook][Textbook]]
-    - [[#course-communication][Course Communication]]
-    - [[#grading-scheme][Grading Scheme]]
-    - [[#assignments][Assignments]]
-    - [[#assignments-ctd][Assignments (ctd.)]]
-    - [[#attendance][Attendance]]
-    - [[#office-hours-][Office Hours :]]
-    - [[#llm-policy][LLM Policy]]
-      - [[#use-of-chatgpt-github-copilot-or-any-other-large-language-model-or-generative-ai-is-forbidden-when-completing-the-assignments-for-this-class][Use of ChatGPT, GitHub Copilot, or any other Large Language Model or Generative AI is forbidden when completing the assignments for this class]]
-      - [[#chatgpt-has-trouble-with-racketplait][ChatGPT has trouble with Racket/plait]]
-      - [[#dont-set-yourself-up-for-failure-on-the-exams][Don't set yourself up for failure on the exams]]
   - [[#motivation-functional-programming][Motivation: Functional Programming]]
-    - [[#programming-in-this-class][Programming in This Class]]
-    - [[#what-is-racket][What is Racket]]
-    - [[#will-i-ever-use-racket-in-industry][Will I Ever Use Racket in Industry?]]
-      - [[#qquad][\qquad]]
-        - [[#centeringhuge-_no_][\centering\huge No]]
-        - [[#centering-probably][\centering (probably)]]
-    - [[#future-proofing][Future Proofing]]
-    - [[#language-trends-from-google-trends][Language Trends (from Google Trends)]]
-      - [[#coloredroyalblueobjective-c-vs-coloredbrickredswift][\colored{RoyalBlue}{Objective C} vs \colored{BrickRed}{Swift}]]
-      - [[#coloredroyalbluec-vs-coloredbrickredpython][\colored{RoyalBlue}{C++} vs \colored{BrickRed}{Python}]]
-    - [[#syntax-vs-semantics][Syntax Vs Semantics]]
-    - [[#seeing-past-syntax][Seeing Past Syntax]]
-      - [[#cpp][CPP]]
-      - [[#racket][Racket]]
-    - [[#functional-programming-going-mainstream][Functional Programming Going Mainstream?]]
   - [[#motivation-interpreters][Motivation: Interpreters]]
-    - [[#importance-of-programming-languages][Importance of Programming Languages]]
-    - [[#programming-languages-arent-magic][Programming Languages Aren't Magic]]
-    - [[#is-this-a-hard-course][Is this a hard course?]]
-      - [[#why-interpreters-are-hard][Why interpreters are hard]]
-      - [[#why-interpreters-are-easy][Why interpreters are easy]]
-    - [[#intro][Intro]]
-      - [[#questions][Questions?]]
 - [[#functional-programming-1-recursion-and-immutable-data][Functional Programming 1: Recursion and Immutable Data]]
   - [[#overview][Overview]]
 - [[#functional-programming-2-defining-data-types][Functional Programming 2: Defining Data Types]]
   - [[#warmup-pairs][Warmup: Pairs]]
-    - [[#pairs-and-for-types][Pairs: "AND" for types]]
-    - [[#pairs-in-general][Pairs in General]]
   - [[#algebraic-data-types][Algebraic Data Types]]
-    - [[#or-for-types]["OR" for types]]
-    - [[#first-example][First example]]
-    - [[#creating-values-of-a-datatype][Creating values of a datatype]]
-    - [[#auto-generated-functions][Auto-generated Functions]]
-    - [[#pattern-matching][Pattern matching]]
-    - [[#total-matching][Total Matching]]
-    - [[#eg-representing-failure][E.g. Representing Failure]]
-    - [[#most-generic-form][Most Generic Form]]
   - [[#recursive-data][Recursive Data]]
-    - [[#self-reference-in-types][Self-reference in types]]
-    - [[#example-lists-as-a-dataype][Example: Lists as a dataype]]
-    - [[#example-filesystem][Example: Filesystem]]
-    - [[#linear-search-using-recursion][Linear Search using Recursion]]
-    - [[#helper-function-searching-the-list][Helper Function: Searching the list]]
-    - [[#testing-the-search][Testing the search]]
 - [[#abstract-syntax-and-parsing][Abstract Syntax and Parsing]]
   - [[#the-big-picture][The Big Picture]]
-    - [[#life-of-a-program][Life of a program]]
-    - [[#syntax-vs-semantics][Syntax vs Semantics]]
   - [[#describing-syntax][Describing Syntax]]
-    - [[#ebnf][EBNF]]
-    - [[#example][Example]]
-    - [[#generating-a-string][Generating a string]]
   - [[#parsing-and-abstract-syntax][Parsing and Abstract Syntax]]
-    - [[#parse-trees][Parse Trees]]
-    - [[#abstract-syntax][Abstract Syntax]]
-    - [[#parsing][Parsing]]
-    - [[#parsing-in-this-class][Parsing in this class]]
-    - [[#s-expressions][S-expressions]]
-    - [[#from-s-exp-to-ast][From S-exp to AST]]
-    - [[#example-parser][Example Parser]]
 - [[#arithmetic-our-first-interpreter][Arithmetic: Our First Interpreter]]
   - [[#interpreters-overview][Interpreters: Overview]]
-    - [[#the-church-turing-thesis][The Church Turing Thesis]]
-    - [[#the-church-turing-thesis][The Church Turing Thesis]]
-      - [[#turing-completeness][Turing Completeness]]
-      - [[#all-turing-complete-languages-can-simulate-each-other][All Turing Complete Languages can simulate each other]]
-    - [[#turing-completeness-and-interpreters][Turing Completeness and Interpreters]]
-    - [[#keeping-it-all-straight][Keeping it all straight]]
-    - [[#general-form-of-an-interpreter][General Form of an Interpreter]]
-    - [[#our-first-interpreter][Our First Interpreter]]
-    - [[#our-first-interpreter][Our First Interpreter]]
-    - [[#adding-features][Adding features]]
-    - [[#updating-the-dataype][Updating the dataype]]
-    - [[#updating-the-parser][Updating the parser]]
-    - [[#updating-the-interpreter][Updating the interpreter]]
 - [[#desugaring-our-first-elaborator][Desugaring: Our First Elaborator]]
   - [[#syntactic-sugar][Syntactic Sugar]]
-    - [[#what-is-syntactic-sugar][What is syntactic sugar]]
-    - [[#desugaring][Desugaring]]
-    - [[#example-subtraction][Example: Subtraction]]
-    - [[#subtraction-datatype][Subtraction: Datatype]]
-    - [[#subtraction-parser-case][Subtraction: Parser Case]]
-    - [[#subtraction-elaborator][Subtraction: Elaborator]]
-    - [[#compilation-vs-elaboration-vs-desugaring][Compilation vs. Elaboration vs. Desugaring]]
 - [[#functions-variables-and-substitution][Functions, Variables and Substitution]]
   - [[#overview-functions][Overview: Functions]]
-    - [[#adding-functions-to-the-language][Adding functions to the language]]
-    - [[#syntax-definitions][Syntax: Definitions]]
-    - [[#parser-definitions][Parser: Definitions]]
-    - [[#new-expression-syntax][New Expression Syntax]]
-    - [[#interpreting-variables][Interpreting Variables]]
-    - [[#interpreting-function-calls][Interpreting Function Calls]]
-    - [[#looking-up-function-definitions][Looking up function definitions]]
-    - [[#substitution][Substitution]]
-      - [[#how-can-we-replace-a-variable-in-an-expression][How can we replace a variable in an expression?]]
-    - [[#cases-for-substitution][Cases for Substitution]]
-    - [[#code-for-substitution][Code for Substitution]]
-    - [[#code-for-substitution-ctd][Code for Substitution (ctd)]]
-    - [[#bringing-it-together][Bringing it together]]
 - [[#review][Review]]
   - [[#overview][Overview]]
-    - [[#the-story-so-far][The Story So Far]]
   - [[#functional-programming][Functional Programming]]
-    - [[#how-to-evaluate-functional-programs][How to evaluate functional programs]]
   - [[#the-languages-weve-built][The Languages We've Built]]
-    - [[#curly][Curly]]
-    - [[#curly-arith][Curly-Arith]]
-    - [[#curly-cond][Curly-Cond]]
-    - [[#curly-sub][Curly-Sub]]
-    - [[#curly-fun][Curly-Fun]]
 - [[#environments-binding-and-scope][Environments, Binding, and Scope]]
   - [[#overview][Overview]]
-    - [[#the-road-so-far][The Road So Far]]
-    - [[#the-road-to-midterm][The Road to Midterm]]
-      - [[#everything-up-to-and-including-closures-may-appear-on-the-midterm][Everything up to and including Closures may appear on the midterm]]
   - [[#environments][Environments]]
-    - [[#functions-review][Functions Review]]
-    - [[#the-problem][The Problem]]
-    - [[#the-solution-environments][The Solution: Environments]]
-    - [[#the-environment-data-structure-bindings][The Environment Data Structure: Bindings]]
-    - [[#the-environment-data-structure-environments][The Environment Data Structure: Environments]]
-    - [[#looking-up-variables][Looking up variables]]
-    - [[#intepreting-curlyfundef-with-environments][Intepreting CurlyFundef with Environments]]
-    - [[#case-plus-etc][Case: Plus etc.]]
-    - [[#case-variable][Case: Variable]]
-    - [[#case-function-call][Case: Function call]]
-    - [[#static-scoping][Static Scoping]]
-    - [[#static-scoping-definition][Static Scoping Definition]]
-    - [[#static-scoping-exapmple][Static Scoping Exapmple]]
   - [[#implementing-let][Implementing Let]]
-    - [[#curly-let][Curly-Let]]
-    - [[#abstract-syntax][Abstract Syntax]]
-    - [[#interpreting-substitution][Interpreting: Substitution]]
-    - [[#substituting-in-a-let-expression][Substituting in a Let Expression]]
-    - [[#interpreting-environments][Interpreting: Environments]]
-    - [[#scope][Scope]]
-    - [[#the-stack][The Stack]]
-    - [[#shadowing-example][Shadowing Example]]
-    - [[#design-choices][Design Choices]]
 - [[#functional-programming-2-first-class-functions][Functional Programming 2: First-Class Functions]]
   - [[#higher-order-functions][Higher Order Functions]]
-    - [[#functions-on-functions][Functions on Functions]]
-    - [[#function-types][Function types]]
-    - [[#first-class-functions][First Class Functions]]
-    - [[#example-repeatedly-apply-a-function][Example: Repeatedly apply a function]]
-    - [[#ctd][ctd]]
-    - [[#example-apply-an-operation-to-each-number-in-a-list][Example: apply an operation to each number in a list]]
-    - [[#ctd][ctd]]
-    - [[#creating-anonymous-functions][Creating Anonymous Functions]]
-    - [[#lambda][Lambda]]
-    - [[#lambda-variations][Lambda variations]]
-    - [[#example][Example]]
-    - [[#define-as-sugar][Define as sugar]]
-    - [[#lambda-in-a-context][Lambda in a context]]
-    - [[#functions-as-return-values][Functions as return values]]
-    - [[#combinators][Combinators]]
-    - [[#example-beyond-numbers][Example: Beyond Numbers]]
 - [[#polymorphic-higher-order-functions][Polymorphic Higher-Order Functions]]
   - [[#highly-generic-programming][Highly Generic Programming]]
-    - [[#polymorphic-functions][Polymorphic Functions]]
-    - [[#example-sorting][Example: Sorting]]
-    - [[#map][Map]]
-    - [[#examples][Examples]]
-    - [[#map-does-recursion-so-you-dont-have-to][Map does recursion so you don't have to]]
-    - [[#filter][Filter]]
-    - [[#filter-examples][Filter examples]]
-    - [[#using-filter-the-functional-quicksort][Using Filter: The Functional Quicksort]]
-    - [[#how-quicksort-works][How Quicksort works]]
-    - [[#quicksort-examples][Quicksort Examples]]
-    - [[#polymorphic-combinators][Polymorphic Combinators]]
-    - [[#function-composition][Function Composition]]
-    - [[#example][Example]]
-    - [[#partial-application][Partial Application]]
-    - [[#example][Example]]
-    - [[#point-free-programming][Point Free Programming]]
 - [[#implementing-lambdas-with-substitution-and-dynamic-typing][Implementing Lambdas with Substitution and Dynamic Typing]]
   - [[#broad-strategy][Broad Strategy]]
-    - [[#implementation-strategy][Implementation Strategy]]
-    - [[#syntax-and-parsing][Syntax and Parsing]]
-    - [[#parsing-calls][Parsing Calls]]
-    - [[#the-value-type][The Value Type]]
-    - [[#lambdas-in-our-asts][Lambdas in our ASTs]]
-    - [[#values-to-expressions][Values to Expressions]]
-    - [[#substitution-for-calls][Substitution for Calls]]
-    - [[#substitution-for-lambda][Substitution for Lambda]]
-    - [[#the-problem-interpretation][The Problem: Interpretation]]
-    - [[#aside-type-based-refactoring][Aside: Type-Based Refactoring]]
-    - [[#dynamic-typing][Dynamic Typing]]
-    - [[#type-safety][Type Safety]]
-    - [[#defining-some-helper-functions][Defining some helper functions]]
-    - [[#evaluating-functions][Evaluating Functions]]
-    - [[#calls][Calls]]
-    - [[#capturing-the-environment][Capturing the environment]]
-    - [[#fixing-the-rest-of-the-interpreter][Fixing the rest of the interpreter]]
-    - [[#a-helpful-higher-order-function][A Helpful Higher Order Function]]
-    - [[#our-language-is-now-turing-complete][Our Language Is Now Turing Complete!]]
-    - [[#a-first-taste-of-laziness][A First Taste of Laziness]]
 - [[#implementing-lambdas-with-environments-closures][Implementing Lambdas with Environments: Closures]]
   - [[#broad-goals][Broad Goals]]
-    - [[#overview][Overview]]
-      - [[#goals][Goals]]
-      - [[#key-concepts][Key Concepts]]
   - [[#the-details][The Details]]
-    - [[#substitution-to-environmenst-review][Substitution to Environmenst, Review]]
-    - [[#core-and-abstract-syntax][Core and Abstract Syntax]]
-    - [[#a-wrong-first-attempt-values][A (Wrong) First Attempt: Values]]
-    - [[#a-wrong-first-attempt-functions-interp][A Wrong First Attempt: Functions Interp]]
-    - [[#a-wrong-first-attempt-calls-interp][A Wrong First Attempt: Calls Interp]]
-    - [[#the-problem][The problem]]
-    - [[#the-solution-closures][The Solution: Closures]]
-    - [[#terminology][Terminology]]
-    - [[#the-new-value-type][The New Value Type]]
-    - [[#a-new-dynamic-type-checker][A New Dynamic Type Checker]]
-    - [[#properly-interpreting-functions][Properly Interpreting Functions]]
-    - [[#properly-interpreting-calls][Properly Interpreting Calls]]
-    - [[#summary-dynamic-vs-static-scope][Summary: Dynamic vs. Static Scope]]
-    - [[#example-static-scope][Example: Static Scope]]
-    - [[#example-static-scope-ctd][Example: Static Scope ctd]]
-    - [[#example-dynamic-scope][Example: Dynamic Scope]]
   - [[#but-professor-when-will-i-ever-use-this][But Professor, When Will I Ever Use This?]]
-    - [[#static-scoping-in-the-wild][Static Scoping in the Wild]]
-      - [[#python][Python:]]
-      - [[#result][Result:]]
-    - [[#static-scoping-in-the-wild][Static Scoping in the Wild]]
-      - [[#javascript][JavaScript:]]
-      - [[#result][Result:]]
-    - [[#async-in-javascript][Async in JavaScript]]
-    - [[#and-more][And More]]
 - [[#midterm-review][Midterm Review]]
   - [[#overview][Overview]]
-    - [[#the-road-so-far][The Road So Far]]
   - [[#functional-programming-concepts][Functional Programming Concepts]]
-    - [[#functional-programming][Functional Programming]]
-    - [[#programming-with-recursion-1-shape][Programming With Recursion 1: Shape]]
-    - [[#programming-with-recursion-template][Programming With Recursion: Template]]
-    - [[#programming-with-recursion-base-vs-recursive-case][Programming With Recursion: Base vs Recursive Case]]
-    - [[#programming-with-recursion-recursive-calls][Programming With Recursion: Recursive Calls]]
-    - [[#programming-with-recursion-putting-it-together][Programming With Recursion: Putting It Together]]
-    - [[#constructing-a-value-of-a-given-type][Constructing a value of a given type]]
   - [[#higher-order-functions][Higher Order Functions]]
-    - [[#designing-higher-order-functions][Designing Higher Order Functions]]
 - [[#generative-recursion-and-tail-recursion][Generative Recursion and Tail Recursion]]
   - [[#broad-goals][Broad Goals]]
-    - [[#overview][Overview]]
   - [[#generative-recursion][Generative Recursion]]
-    - [[#the-problem][The Problem]]
-    - [[#example-reversing-a-list-the-naive-way][Example: Reversing a List The Naive Way]]
-    - [[#reverse-what-we-want-conceptually][Reverse: What we want (conceptually)]]
-    - [[#an-efficient-reverse][An efficient reverse]]
-    - [[#general-template][General Template]]
-      - [[#to-write-f--ty1-ty2--tyn---returnty][To write f : (Ty1 Ty2 ... TyN -> ReturnTy)]]
-    - [[#the-call-stack][The Call Stack]]
-    - [[#stack-overflow][Stack Overflow]]
-    - [[#example][Example]]
-    - [[#returning-a-function-call][Returning a Function Call]]
-    - [[#whats-the-difference][What's The Difference?]]
-    - [[#tail-calls][Tail Calls]]
-    - [[#tail-recursion][Tail Recursion]]
-    - [[#example-list-length-in-constant-space][Example: List Length in Constant Space]]
-    - [[#live-example-slow-and-fast-factorial][Live Example: Slow and Fast Factorial]]
-    - [[#a-note-on-terminology][A Note On Terminology]]
-    - [[#tail-recursion-and-while-loops][Tail Recursion and While Loops]]
-    - [[#implicit-vs-explicit-state][Implicit vs. Explicit State]]
   - [[#abstracting-generative-recursion][Abstracting Generative Recursion]]
-    - [[#objective][Objective]]
-    - [[#higher-order-genrative-recursion-folds][Higher-Order Genrative Recursion: Folds]]
-    - [[#foldl][Foldl]]
-    - [[#example-reverse-using-folds][Example: Reverse using folds]]
-    - [[#reasoning-with-foldl][Reasoning with foldl]]
-    - [[#non-tail-folds][Non-tail Folds]]
-    - [[#list-recursion-once-and-for-all][List Recursion, Once And For All]]
 - [[#currying-and-the-lambda-calculus][Currying and the Lambda Calculus]]
   - [[#overview][Overview]]
-    - [[#objectives][Objectives]]
   - [[#currying][Currying]]
-    - [[#executing-a-multiple-argument-function][Executing a multiple-argument function]]
-    - [[#achieving-this-currying][Achieving this: Currying]]
-    - [[#definition][Definition]]
-    - [[#desugaring-with-currying][Desugaring with Currying]]
-    - [[#ast-for-multi-argument-functions][AST for Multi-Argument Functions]]
-    - [[#elaborating-multi-argument-functions][Elaborating Multi-Argument Functions]]
-    - [[#multi-argument-calls-with-tail-recursion][Multi-Argument Calls with Tail Recursion]]
-    - [[#building-the-entire-call][Building The Entire Call]]
-    - [[#a-word-of-warning][A Word of Warning]]
-    - [[#another-desugaring-let][Another Desugaring: Let]]
   - [[#lambda-the-ultimate][Lambda The Ultimate]]
-    - [[#functions-as-sugar][Functions As Sugar]]
-    - [[#the-smallest-language-we-can-imagine][The Smallest Language We Can Imagine]]
-    - [[#interpreting-the-utlc][Interpreting the UTLC]]
-    - [[#booleans][Booleans]]
-    - [[#numbers][Numbers]]
-    - [[#pairs][Pairs]]
-    - [[#recursion-the-y-combinator][Recursion: The Y Combinator]]
 - [[#store-passing-and-boxes][Store Passing and Boxes]]
   - [[#overview][Overview]]
-    - [[#store-passing-interpreters][Store Passing Interpreters]]
   - [[#curly-box-a-language-with-mutation][Curly-Box: A Language with Mutation]]
-    - [[#boxes][Boxes]]
-    - [[#expressions-vs-statements][Expressions vs. Statements]]
-    - [[#sequencing][Sequencing]]
-    - [[#boxes][Boxes]]
-    - [[#boxes-in-curly-box][Boxes in Curly-Box]]
-    - [[#example][Example]]
   - [[#interpreting-boxes][Interpreting Boxes]]
-    - [[#semantics][Semantics]]
-    - [[#the-store][The Store]]
-    - [[#store-operations-override-store][Store Operations: override-store]]
-    - [[#store-operations-new-loc][Store Operations: new-loc]]
-    - [[#store-operations-fetch][Store Operations: fetch]]
-    - [[#a-store-passing-interpreter][A Store Passing Interpreter]]
-    - [[#updating-the-interpreter-plus][Updating The Interpreter: Plus]]
-    - [[#aside-racket-macros][Aside: Racket Macros]]
-    - [[#a-macro-for-interpreting-with-stores][A Macro for Interpreting with Stores]]
-    - [[#using-our-macro][Using Our Macro]]
-    - [[#boxes-as-values][Boxes as Values]]
-    - [[#interpreting-box][Interpreting Box]]
-    - [[#interpreting-unbox][Interpreting Unbox]]
-    - [[#interpreting-set-box][Interpreting Set-box!]]
-    - [[#interpreting-begin][Interpreting Begin]]
-    - [[#stores-vs-environment][Stores vs Environment]]
 - [[#mutable-variables][Mutable Variables]]
   - [[#curly-mutvar][Curly-Mutvar]]
-    - [[#overview][Overview]]
-    - [[#identifiers-vs-variables][Identifiers vs Variables]]
-    - [[#bindings-with-mutable-variables][Bindings with mutable variables]]
-    - [[#interpreting-variables][Interpreting Variables]]
-    - [[#adding-mutation-curly-mutvar][Adding mutation: Curly-Mutvar]]
-    - [[#function-calls][Function Calls]]
-    - [[#pass-by-value][Pass-by-value]]
-    - [[#pass-by-value-interp][Pass-by-value interp]]
-    - [[#pass-by-reference][Pass-by-reference]]
-    - [[#interpreting][Interpreting]]
-    - [[#the-difference][The Difference]]
-    - [[#example][Example]]
-    - [[#which-to-choose][Which to Choose?]]
-    - [[#aliasing][Aliasing]]
-    - [[#example][Example]]
 - [[#implementing-recursion-via-state][Implementing Recursion via State]]
   - [[#recursion-via-state][Recursion via State]]
-    - [[#overview][Overview]]
-    - [[#recursion-in-curly-rec][Recursion in Curly-Rec]]
-    - [[#bad-recursion][Bad Recursion]]
-    - [[#good-recursion][Good Recursion]]
-    - [[#interpreting-recursion-the-problem][Interpreting Recursion: The Problem]]
-    - [[#interpreting-recursion-idea][Interpreting Recursion: Idea]]
-    - [[#interpreting-recursion-value][Interpreting Recursion: Value]]
-    - [[#interpreting-recursion-code][Interpreting Recursion: Code]]
-    - [[#example][Example]]
-    - [[#example-ctd][Example (ctd)]]
-    - [[#example-ctd][Example (ctd)]]
-    - [[#example-ct][Example (ct)]]
-    - [[#landins-knot][Landin's Knot]]
 - [[#objects-and-oop][Objects and OOP]]
   - [[#concepts-of-objects][Concepts of Objects]]
-    - [[#overview][Overview]]
-    - [[#the-objectdatatype-duality][The Object/Datatype Duality]]
-    - [[#the-opposite-oop][The Opposite: OOP]]
-    - [[#oop-vs-algebraic-datatypes][OOP vs Algebraic Datatypes]]
   - [[#curly-obj-immut][Curly-Obj-Immut]]
-    - [[#immutable-objects][Immutable Objects]]
-    - [[#object-operations][Object Operations]]
-    - [[#object-operations-ctd][Object operations ctd]]
-    - [[#example][Example]]
-    - [[#example][Example]]
   - [[#implementing-objects][Implementing Objects]]
-    - [[#general-strategy][General Strategy]]
-    - [[#new-expression-variants][New Expression Variants]]
-    - [[#new-value-variants][New Value Variants]]
-    - [[#starting-language][Starting Language]]
-    - [[#interpreting-object-creation][Interpreting Object Creation]]
-    - [[#a-helper-function-for-list-of-pairs][A Helper Function for List of Pairs]]
-    - [[#interpreting-field-lookup][Interpreting Field Lookup]]
-    - [[#interpreting-method-calls][Interpreting Method Calls]]
-    - [[#passing-the-self-reference][Passing the self reference]]
-    - [[#example-oop-lists][Example: OOP Lists]]
-    - [[#example-functions-as-objects][Example: Functions as Objects]]
 - [[#lazy-evaluation][Lazy Evaluation]]
   - [[#lazy-evaluation][Lazy Evaluation]]
-    - [[#overview][Overview]]
-    - [[#the-type-of-substitution][The Type of Substitution]]
-    - [[#substituting-expressions-vs-values][Substituting Expressions vs. Values]]
-    - [[#substitution-based-lazy-evaluation][Substitution-Based Lazy Evaluation]]
-    - [[#strict-vs-lazy-semantics][Strict vs. Lazy Semantics]]
-    - [[#example-error][Example: Error]]
-    - [[#example-loop][Example: Loop]]
-    - [[#the-general-rule][The General Rule]]
-    - [[#non-function-recursion][Non-Function Recursion]]
-    - [[#strictness-points][Strictness Points]]
-    - [[#laziness-in-real-languages][Laziness in real languages]]
-    - [[#laziness-via-lambda][Laziness via lambda]]
-    - [[#laziness-via-lambda-example][Laziness via lambda example]]
 - [[#final-exam-review-functional-programming][Final Exam Review: Functional Programming]]
   - [[#functional-programming-what-we-learned][Functional Programming: What We Learned]]
-    - [[#main-topics][Main Topics]]
   - [[#purely-functional-programming][Purely Functional Programming]]
-    - [[#expressions][Expressions]]
-    - [[#functions][Functions]]
-    - [[#the-design-process][The Design Process]]
-    - [[#figuring-out-the-implementation][Figuring out the implementation]]
-    - [[#filling-the-holes][Filling the holes]]
-    - [[#doing-this-for-interpreters][Doing this for interpreters]]
   - [[#algebraic-data-types][(Algebraic) Data Types]]
-    - [[#or-for-types][OR for types]]
-    - [[#datatype-declarations][Datatype Declarations]]
-    - [[#type-case][Type-case]]
-    - [[#recursive-data][Recursive Data]]
   - [[#higher-order-functions][Higher Order Functions]]
-    - [[#lambdas][Lambdas]]
-    - [[#functions-taking-functions][Functions Taking Functions]]
-    - [[#higher-order-polymorphism][Higher Order Polymorphism]]
   - [[#tail-recursion][Tail Recursion]]
-    - [[#consider-the-loop][Consider the loop]]
-    - [[#tail-calls][Tail Calls]]
-    - [[#tail-recursion][Tail Recursion]]
-    - [[#accumulator][Accumulator]]
-    - [[#general-template][General Template]]
-    - [[#equational-rules][Equational rules]]
-    - [[#foldl][Foldl]]
 - [[#final-exam-review-interpreters][Final Exam Review: Interpreters]]
   - [[#interpreters][Interpreters]]
-    - [[#what-weve-learned][What We've Learned]]
   - [[#syntax-and-the-language-pipeline][Syntax and the Language Pipeline]]
-    - [[#life-of-a-program][Life of a program]]
-    - [[#the-pipeline][The Pipeline]]
-    - [[#interpreter-basics][Interpreter Basics]]
-    - [[#variables-and-substitution][Variables and Substitution]]
-    - [[#function-calls][Function Calls]]
-    - [[#local-definitions-intuition][Local Definitions: Intuition]]
-    - [[#local-definitions][Local Definitions]]
-    - [[#dynamic-type-checking][Dynamic Type Checking]]
   - [[#environments][Environments]]
-    - [[#why-environments][Why Environments]]
-    - [[#environments-operations][Environments Operations]]
-    - [[#letvar-with-environments][Letvar with environments]]
-    - [[#closures][Closures]]
-    - [[#static-vs-dynamic-scope][Static vs. Dynamic Scope]]
   - [[#mutable-state][Mutable State]]
-    - [[#generative-recursion][Generative Recursion]]
-    - [[#boxes][Boxes]]
-    - [[#mutable-variables][Mutable Variables]]
-    - [[#recursion][Recursion]]
   - [[#alternate-models-of-execution][Alternate Models of Execution]]
-    - [[#oop][OOP]]
-    - [[#lazy][Lazy]]
 :END:
 
 
